--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" manifest="note.appcache">
+<!-- <html lang="en" manifest="note.appcache">-->
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <script src="/js/note.js"></script>
